--- a/templates/activity_card_listview/activity_card.html
+++ b/templates/activity_card_listview/activity_card.html
@@ -13,6 +13,8 @@
     <!-- VUE -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
+<!-- need FIREBASE function READ -->
+
 </head>
 <!-- ACTIVITY CARD -->
 <body>
@@ -56,14 +58,11 @@
                                             <div class="progress">
                                                     <!-- VOTED YES -->
                                                 <div id="progress_yes" class="progress-bar bg-success" role="progressbar" aria-label="voted_yes_percentage" :style="{width: voted_yes_percentage + '%' }" v-bind:aria-valuenow="voted_yes_percentage" aria-valuemin="0" aria-valuemax="100" data-bs-toggle="tooltip" data-bs-placement="top"  :data-bs-title="voted_yes_people"></div>
-
                                                     <!-- VOTED NO -->
                                                 <div id="progress_no" class="progress-bar bg-danger" role="progressbar" aria-label="voted_no_percentage" :style="{width: voted_no_percentage + '%' }" v-bind:aria-valuenow="voted_no_percentage" aria-valuemin="0" aria-valuemax="100" data-bs-toggle="tooltip" data-bs-placement="top" :data-bs-title="voted_no_people"> </div>
                                                 
-
                                                     <!--  VOTED MAYBE   -->
                                                 <div id="progress_maybe" class="progress-bar bg-secondary" role="progressbar" aria-label="yet_to_vote_percentage" :style="{width: yet_to_vote_percentage + '%' }" v-bind:aria-valuenow="yet_to_vote_percentage" aria-valuemin="0" aria-valuemax="100" data-bs-toggle="tooltip" data-bs-placement="top" :data-bs-title="yet_to_vote_people"></div>
-
                                                 
                                             </div>
 
@@ -85,12 +84,15 @@
                                 <div class="row">
                                     <div class="col-11"></div>
                                     <div class="col-1">
-                                        <button type="button" class="btn btn-sm rounded btn-main text-white float-end" style="position:absolute;bottom:25; right:25;" data-bs-toggle="button">Edit</button>
+                                        <button type="button" class="btn btn-sm rounded btn-main-fixed text-white float-end" style="position:absolute;bottom:25; right:25;" data-bs-toggle="button">Edit</button>
                                     </div>
                                 </div>
                                 </div>
                             </div>
                         </div>
+
+
+
                     </div>
                     
                 <!-- ADD MAP DIV UNDER A COL HERE -->
@@ -111,10 +113,10 @@
     </div>
             
 
+
     <!-- BOOTSTRAP JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script src="script.js"></script>
-
     <!-- sidebar js -->
     <script src="../pages/sidebars.js"></script>
 </body>
