--- a/templates/pages/create-trip.html
+++ b/templates/pages/create-trip.html
@@ -30,7 +30,7 @@
     </div>
 
         <!-- new trip form -->
-    <div id="create_trip">
+    <div id="create_get_trip">
         <div class="container-md text-dark py-3 position-relative" id="datetime_app" >
             <form action="#">
                 <!-- title -->
