fixed functionality of pages

--- a/templates/pages/signup_login pages/login_page.html
+++ b/templates/pages/signup_login pages/login_page.html
@@ -66,7 +66,7 @@
                     <div>
                         <p class="text-center text-muted">or</p>
                         <div class="d-grid">
-                            <button type="button" @click="" class="btn btn-outline-info mb-2"><i class="fa-brands fa-google"></i> Continue with Google</button>
+                            <button type="button" @click="login_with_google()" class="btn btn-outline-info mb-2"><i class="fa-brands fa-google"></i> Continue with Google</button>
                         </div>
                         
                     </div>
