--- a/templates/pages/signup_login pages/reset_password_page.html
+++ b/templates/pages/signup_login pages/reset_password_page.html
@@ -62,7 +62,7 @@
                     An email with link
                     <br>
                     <div class="d-grid">
-                        <button type="button" @click="login()" class="btn btn-primary mb-4">Send Reset Password Email</button>
+                        <button type="button" @click="send_reset_email()" class="btn btn-primary mb-4">Send Reset Password Email</button>
                     </div>
 					
 				</form>
