lodging page: Fully linked to database!

--- a/templates/lodging/lodging.html
+++ b/templates/lodging/lodging.html
@@ -389,7 +389,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBw6a6E_r_udr7CXLmLZ-6HspypPd9qvMU"></script>
 
     <!-- local js import -->
-    <script src="lodging.js"></script>
+    <script src="lodging.js" type="module"></script>
 
     <!-- Refer to sidebar JS -->
     <script src="../pages/sidebars.js"></script>
