--- a/templates/create_activities/create_activities.html
+++ b/templates/create_activities/create_activities.html
@@ -18,7 +18,7 @@
     <body>
         <div class="container-fluid">
             <div class="row sidebar-parent flex-nowrap">
-                <div id="nav" class="col-2 sidebar-css">
+                <div id="nav" class="col-auto sidebar-css">
                      <!-- SIDEBAR  -->
                     <sidebar-phase2></sidebar-phase2>
                 </div>
