--- a/templates/lodging/lodging.html
+++ b/templates/lodging/lodging.html
@@ -25,7 +25,7 @@
 <body>
     <div class="container-fluid" id="accommodation_app">
         <div class="row sidebar-parent flex-nowrap" @click="update_local_vmodel()" @keydown="update_local_vmodel()">
-            <div id="nav" class="col-3 sidebar-css">
+            <div id="nav" class="col-auto sidebar-css">
                 <!-- SIDEBAR -->
                 <sidebar-general></sidebar-general>
             </div>
