--- a/templates/pages/sidebar-phase2.html
+++ b/templates/pages/sidebar-phase2.html
@@ -17,8 +17,8 @@
 
     <div class="container-fluid">
         <div class="row sidebar-parent flex-nowrap">
-            <div id="nav" class="col-2 sidebar-css">
-                 <!-- SIDEBAR  -->
+            <div id="nav" class="col-auto sidebar-css">
+                <!-- SIDEBAR  -->
                 <sidebar-phase2></sidebar-phase2>
             </div>
 
@@ -26,6 +26,8 @@
             <div class="col p-4">
                 <div class="row">
                     <div class="col">
+
+                        <!--ADD YOUR CONTENT HEREEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE IN THE COL-->
                         <h3>Phase 2 sidebar for Jun Sui</h3>
                         <p class="lead">
                             Content content content
@@ -43,7 +45,10 @@
                         </ul>
                     </div>
 
-                    <div class="col">another column</div>
+                    <div class="col">
+                        <!--ADD YOUR CONTENT HEREEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE IN THE COL-->
+                        another column
+                    </div>
 
                 </div>
 
