--- a/templates/pages/sidebar-general.html
+++ b/templates/pages/sidebar-general.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container-fluid">
         <div class="row sidebar-parent flex-nowrap">
-            <div id="nav" class="col-2 sidebar-css">
+            <div id="nav" class="col-auto sidebar-css">
                  <!-- SIDEBAR  -->
                 <sidebar-general></sidebar-general>
             </div>
