select activity sidebar back

--- a/templates/select_activities_page/select_activities_page.html
+++ b/templates/select_activities_page/select_activities_page.html
@@ -26,7 +26,7 @@
         <div class="row flex-nowrap" >
             <div id="nav" class="col-auto sidebar-css">
                 <!-- SIDEBAR  -->
-               <sidebar-phase2></sidebar-phase2>
+               <select-activity-sidebar></select-activity-sidebar>
            </div>
 
             <!-- rest of site -->
