--- a/templates/lodging/lodging.html
+++ b/templates/lodging/lodging.html
@@ -129,7 +129,7 @@
                         </div>
 
                         <!-- attachments -->
-                        <div class="row mb-4 mt-5 mt-md-4 mb-5 mb-md-0">
+                        <div class="row mb-4 mt-5 mt-md-4 mb-5 mb-md-4">
                             <div class="col-lg-6 col-md-8">
                                 <!-- attachments -->
                                 <div class="form-floating">
@@ -205,7 +205,7 @@
                                 </div>
                             </div>
                 
-                            <div class="row justify-content-center mt-5 mt-md-4">
+                            <div class="row justify-content-center mt-5 mt-md-4 mb-5 mb-md-0">
                                 <div class="col-md-11 text-center text-md-start">
                                     <p>
                                         <i class="fa-solid fa-people-group"></i>
@@ -314,7 +314,7 @@
                             </div>
     
                             <!-- attachments -->
-                            <div class="row mb-4 mt-5 mt-md-4">
+                            <div class="row mt-5 mt-md-4 mb-5 mb-md-4">
                                 <div class="col-lg-6 col-md-8">
                                     <!-- attachments -->
                                     <div class="form-floating">
