--- a/templates/flight_page/flight_page.html
+++ b/templates/flight_page/flight_page.html
@@ -24,7 +24,7 @@
         <div class="row sidebar-parent flex-nowrap">
             <div id="nav" class="col-auto sidebar-css">
                  <!-- SIDEBAR  -->
-                <sidebar-general></sidebar-general>
+                 <sidebar-phase3></sidebar-phase3>
             </div>
 
             <!-- ALL OTHER CONTENT -->
