--- a/templates/lodging/lodging.html
+++ b/templates/lodging/lodging.html
@@ -27,7 +27,7 @@
         <div class="row sidebar-parent flex-nowrap" @click="update_local_vmodel()" @keydown="update_local_vmodel()">
             <div id="nav" class="col-auto sidebar-css">
                 <!-- SIDEBAR -->
-                <sidebar-general></sidebar-general>
+                <sidebar-phase3></sidebar-phase3>
             </div>
 
             <!-- ALL OTHER CONTENT -->
