--- a/templates/pages/create-trip.html
+++ b/templates/pages/create-trip.html
@@ -30,7 +30,7 @@
     </div>
 
         <!-- new trip form -->
-    <div id="create_get_trip">
+    <!-- <div id="create_get_trip"> -->
         <div class="container-md text-dark py-3 position-relative" id="datetime_app" >
             <form action="#">
                 <!-- title -->
@@ -88,8 +88,8 @@
     </div>
 
     <!--progress bar-->
-    <br><br>
-    <div class="container-sm position-relative mx-auto">
+    <!-- <br><br> -->
+    <!-- <div class="container-sm position-relative mx-auto">
         <div class="progress" style="height: 1px;">
             <div class="progress-bar" role="progressbar" aria-label="Progress" style="width: 0%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
@@ -99,7 +99,7 @@
         <button type="button" class="position-absolute top-0 start-75 translate-middle btn btn-sm btn-secondary rounded-pill" style=" width: 2rem; height:2rem;"disabled><br>Sort</button>
         <button type="button" class="position-absolute top-0 start-100 translate-middle btn btn-sm btn-secondary rounded-pill" style="width: 2rem; height:2rem;"disabled><br>Enjoy your trip!</button>
     </div>
-    
+     -->
 </div>
 
 
