create trip collab issue test

--- a/templates/pages/create-trip.html
+++ b/templates/pages/create-trip.html
@@ -30,7 +30,7 @@
     </div>
 
         <!-- new trip form -->
-    <!-- <div id="create_get_trip"> -->
+    <div id="create_get_trip">
         <div class="container-md text-dark py-3 position-relative" id="datetime_app" >
             <form action="#">
                 <!-- title -->
@@ -75,8 +75,90 @@
             
                 <!-- collab & submit -->
                 <div class="row justify-content-center">
-                    <div>
-                        <button type="button" class="btn btn-fade">+ Add Collaborators</button>
+                    <div id="collaborators">
+                        <!-- -------------------------------------- -->
+                        
+                        <!-- -------------------------------------- -->
+                        <button type="button" class="btn btn-fade" data-bs-toggle="modal" data-bs-target="#exampleModal">+ Add Collaborators</button>
+                        
+                        <p class="text-muted" v-if="nameList.length>0">You have added {{nameList}} </p>
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="height: 500px;">
+                            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Add your Friends!</h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="row">
+                                        <div class="col-2">
+                                          <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end ">
+                                            <nav class="nav nav-pills flex-column sticky-top">
+                                              <a class="nav-link" href="#A">A</a>
+                                              <a class="nav-link" href="#J">J</a>
+                                              <a class="nav-link" href="#K">K</a>
+                                              <a class="nav-link" href="#P">P</a>
+                                              <a class="nav-link" href="#S">S</a>
+                                              <a class="nav-link" href="#W">W</a>
+                                            </nav>
+                                          </nav>
+                                        </div>
+
+                                      
+                                        <div class="col-10">
+                                          <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-smooth-scroll="true" class="scrollspy-example-2" tabindex="0">
+                                            <ul class="list-group">
+                                                <li class="list-group-item">
+                                                  <input class="form-check-input me-1" type="checkbox" value="Adam" id="A" v-model="nameList">
+                                                  <label class="form-check-label" for="firstCheckbox">Adam</label>
+                                                </li>
+                                                <li class="list-group-item">
+                                                    <input class="form-check-input me-1" type="checkbox" value="Aliali" v-model="nameList">
+                                                    <label class="form-check-label" for="firstCheckbox">Aliali</label>
+                                                </li>
+                                                <li class="list-group-item">
+                                                  <input class="form-check-input me-1" type="checkbox" value="Jun Sui" id="J" v-model="nameList">
+                                                  <label class="form-check-label" for="secondCheckbox">Jun Sui</label>
+                                                </li>
+                                                <li class="list-group-item">
+                                                    <input class="form-check-input me-1" type="checkbox" value="Joker" v-model="nameList">
+                                                    <label class="form-check-label" for="firstCheckbox">Joker</label>
+                                                </li>
+                                                <li class="list-group-item">
+                                                  <input class="form-check-input me-1" type="checkbox" value="Keng Boon" id="K" v-model="nameList">
+                                                  <label class="form-check-label" for="thirdCheckbox">Keng Boon</label>
+                                                </li>
+                                                <li class="list-group-item">
+                                                    <input class="form-check-input me-1" type="checkbox" value="Prof" id="P" v-model="nameList">
+                                                    <label class="form-check-label" for="thirdCheckbox">Prof</label>
+                                                  </li>
+                                                <li class="list-group-item">
+                                                    <input class="form-check-input me-1" type="checkbox" value="Seth" id="S" v-model="nameList">
+                                                    <label class="form-check-label" for="thirdCheckbox">Seth</label>
+                                                </li>
+                                                <li class="list-group-item">
+                                                    <input class="form-check-input me-1" type="checkbox" value="Wei Xuan" id="W" v-model="nameList">
+                                                    <label class="form-check-label" for="thirdCheckbox">Wei Xuan</label>
+                                                </li>
+                                              </ul>
+
+                                              
+                                           
+                                          </div>
+                                        </div>
+                                      </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-info" @click="showNames()" data-bs-dismiss="modal">Add</button>
+                                </div>
+                            </div>
+                            </div>
+                        </div>
+
+
+
                     </div>
                     <div class="p-1 mt-3" style="max-width: 130px;">
                         <button type="button" @click="create_new_trip()" class="btn btn-primary text-light">Start Planning</button>
@@ -101,6 +183,33 @@
     </div>
      -->
 </div>
+
+
+
+
+
+<script>
+    const vm = Vue.createApp({ 
+        data() {
+            return {
+                nameList: [],
+            }
+        },
+        
+    }).mount('#collaborators')
+</script>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     <!-- START OF JS IMPORTS (DO NOT ADD ANYTHING BELOW THIS LINE!) ---------------------------------------------------------------------------------------------- -->
