--- a/templates/pages/create-trip.html
+++ b/templates/pages/create-trip.html
@@ -17,20 +17,17 @@
      <!-- Vue js -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
-    <!-- access firebase -->
-    <script type="module" src="create_get_trip_CRUD_database.js"></script>
-
     <title>WAD Travels Project</title>
 
 </head>
 <body>
-    
     <div id="nav">
         <createtrip-navbar></createtrip-navbar>
     </div>
 
         <!-- new trip form -->
     <div id="create_get_trip">
+
         <div class="container-md text-dark py-3 position-relative">
             <form action="#">
                 <!-- title -->
@@ -62,13 +59,13 @@
                 <!-- trip-from date -->         
                 <div class="row justify-content-center">       
                     <div class="form-floating my-3 col">
-                        <input type="date" v-model="sDate" name="start_date" placeholder="Select Date" id="date_test">
+                        <input type="date" v-model="sDate" name="start_date" placeholder="Select Date">
                         <label for="start_date"><i class="fa-regular fa-calendar mx-2"></i> <span style="color: rgb(34, 152, 152);"> Start Date</span></label>
                     </div>
                 
                     <!-- trip-to date -->                
                     <div class="form-floating my-3 col">
-                        <input type="date" v-model="eDate" name="end_date" placeholder="Select Date" id="date_test">
+                        <input type="date" v-model="eDate" name="end_date" placeholder="Select Date">
                         <label for="end_date"><i class="fa-regular fa-calendar mx-2"></i><span style="color: rgb(34, 152, 152);"> End Date</span></label>
                     </div>
                 </div>
@@ -90,21 +87,20 @@
                                 <div class="modal-body">
                                     <div class="row">
                                         <div class="col-2">
-                                          <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end ">
-                                            <nav class="nav nav-pills flex-column sticky-top">
-                                              <a class="nav-link" href="#A">A</a>
-                                              <a class="nav-link" href="#J">J</a>
-                                              <a class="nav-link" href="#K">K</a>
-                                              <a class="nav-link" href="#P">P</a>
-                                              <a class="nav-link" href="#S">S</a>
-                                              <a class="nav-link" href="#W">W</a>
+                                            <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end ">
+                                                <nav class="nav nav-pills flex-column sticky-top">
+                                                <a class="nav-link" href="#A">A</a>
+                                                <a class="nav-link" href="#J">J</a>
+                                                <a class="nav-link" href="#K">K</a>
+                                                <a class="nav-link" href="#P">P</a>
+                                                <a class="nav-link" href="#S">S</a>
+                                                <a class="nav-link" href="#W">W</a>
+                                                </nav>
                                             </nav>
-                                          </nav>
                                         </div>
 
-                                      
                                         <div class="col-10">
-                                          <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-smooth-scroll="true" class="scrollspy-example-2" tabindex="0">
+                                         <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-smooth-scroll="true" class="scrollspy-example-2" tabindex="0">
                                             <ul class="list-group">
                                                 <li class="list-group-item">
                                                   <input class="form-check-input me-1" type="checkbox" value="Adam" id="A" v-model="nameList">
@@ -144,7 +140,7 @@
                                            
                                           </div>
                                         </div>
-                                      </div>
+                                    </div>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -179,7 +175,6 @@
         <button type="button" class="position-absolute top-0 start-100 translate-middle btn btn-sm btn-secondary rounded-pill" style="width: 2rem; height:2rem;"disabled><br>Enjoy your trip!</button>
     </div>
      -->
-</div>
 
 
 
@@ -192,26 +187,15 @@
     
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-    
+
     <!-- Flatpickr JS -->
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-
-    <script>
-         let date_config = {
-            altInput: true,
-            altFormat: "J M y",
-            disableMobile: "true"
-        }
-
-        // date only
-        let date_fp_obj = flatpickr("input[type=date]", date_config)
-    </script>
 
     <!-- Refer to my own external JS -->
     <script src="homepageNavBar.js"></script>
 
-</body>
-</html>
+    <!-- access firebase -->
+    <script type="module" src="create_get_trip_CRUD_database.js"></script>
 
 </body>
 </html>
