--- a/templates/select_activities_page/select_activities_page.html
+++ b/templates/select_activities_page/select_activities_page.html
@@ -104,7 +104,7 @@
 
                         <h3>Total Spending: {{ spending }} SGD</h3>
  
-                        <button type="button" class="btn btn-main-fixed">Confirm</button>
+                        <button type="button" class="btn btn-main-fixed" onclick="location.href='kengboonang.github.io/WADBrothers.github.io/map_phase3.html'">Confirm</button>
 
                 </footer>
             </div>
