--- a/templates/template.css
+++ b/templates/template.css
@@ -103,3 +103,28 @@ button.dropdown[aria-expanded = true] .fa-chevron-down{
 button.dropdown[aria-expanded = false] .fa-chevron-up{
     display: none;
 }
+
+
+/* Homepage elements */
+.home_page_main_img img{
+    object-fit: cover ;
+    object-position: bottom;
+    width: 100%;
+    max-height: 90vh;
+}
+
+div.main-pg-faded-bg {
+    background-color: rgba(255, 255, 255, 0.7);
+    -webkit-backdrop-filter: blur(100px);
+    backdrop-filter: blur(5px);
+
+    border-radius: 3em;
+    
+    height: 75%;
+    width: 50vw;
+
+    top: 12%;
+    left: 10%;
+
+    z-index: 2;
+}
